@@ -1,3 +1,9 @@
+2009-02-22 [colin]	3.7.0cvs69
+
+	* src/addressbook.c
+	* src/procmime.c
+		More fixes
+
 2009-02-22 [colin]	3.7.0cvs68
 
 	* src/addrduplicates.c
